[gd_scene load_steps=4 format=3 uid="uid://dqk587psf66uf"]

[ext_resource type="LabelSettings" uid="uid://deva1rayrwu8a" path="res://menus/victory_screen/game_over_label_settings.tres" id="1_6apw4"]
[ext_resource type="Script" path="res://menus/victory_screen/victory_screen.gd" id="1_oau4s"]
[ext_resource type="LabelSettings" uid="uid://1alty3t2ndgn" path="res://menus/victory_screen/player_label_settings.tres" id="2_qde0g"]

[node name="VictoryScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oau4s")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -264.0
offset_right = 574.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 2
text = "Game over"
label_settings = ExtResource("1_6apw4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -124.0
offset_right = 574.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Left player won!"
label_settings = ExtResource("2_qde0g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReplayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -251.0
offset_top = 51.0
offset_right = -51.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
text = "Play again"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 49.0
offset_top = 51.0
offset_right = 249.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2
text = "Back to main menu"

[connection signal="pressed" from="ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
